--- a/index.html
+++ b/index.html
@@ -185,25 +185,25 @@
         <div class="footer-section">
           <h2>Product</h2>
           <ul>
-            <li>Overwiew</li>
-            <li>Plans</li>
-            <li>Customer Stories</li>
+            <li><a href="">Overview</a></li>
+            <li><a href="">Plans</a></li>
+            <li><a href="">Customer Stories</a></li>
           </ul>
         </div>
         <div class="footer-section">
           <h2>Resources</h2>
           <ul>
-            <li>Blog</li>
-            <li>Guides & Tutorials</li>
-            <li>Help Center</li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Guides & Tutorials</a></li>
+            <li><a href="">Help Center</a></li>
           </ul>
         </div>
         <div class="footer-section">
             <h2>Company</h2>
             <ul>
-              <li>About us</li>
-              <li>Careers</li>
-              <li>Media Kit</li>
+              <li><a href="">About us</a></li>
+              <li><a href="">Careers</a></li>
+              <li><a href="">Media Kit</a></li>
             </ul>
           </div>
           <div class="footer-section">
