--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="home-text">
           <h1>Your City, Your Ride</h1>
           <p>Get Moving Quickly With Our Easy Bike Rentals.</p>
-          <a href="#" class="btn"><button> Start Renting </button></a>
+          <a href="https://bicibreeze-front-end.web.app/" class="btn"><button> Start Renting </button></a>
         </div>
         <div class="home-img">
             <img src='https://i.postimg.cc/D0b77kxw/bike.png' border='0' alt='bike'/>
